--- a/src/App.module.css
+++ b/src/App.module.css
@@ -4,9 +4,33 @@ body {
 
 .container {
   display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 .image {
-  width: 300px;
-  margin-top: 30px;
+  width: 400px;
+  height: 200px;
+  margin-top: 50px;
+}
+
+.app__information > h3 {
+  color: #6a5d5d;
+  font-weight: 400;
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+
+.app__information > h3:last-of-type {
+  margin-top: 1rem;
+}
+
+@media only screen and (max-width: 770px) {
+  .container {
+    margin: 0 10%;
+  }
+
+  .image {
+    width: 100%;
+  }
 }
